--- a/app/src/main/res/layout/activity_ekran3.xml
+++ b/app/src/main/res/layout/activity_ekran3.xml
@@ -6,7 +6,27 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="test.tomek.com.cwiczenie2_umawianiewizyt.Ekran3">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/label_comments_text" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/label_comments" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/editText_commentWindow"
+        android:layout_below="@+id/label_comments"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_dalej_string"
+        android:id="@+id/button_dalejEkran3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="onDalejEkran3Clicked" />
 
 </RelativeLayout>
